fix: truncate long subcategory names in category cards

--- a/src/assets/styles/pages/solution/_solution_categories.scss
+++ b/src/assets/styles/pages/solution/_solution_categories.scss
@@ -162,6 +162,8 @@
         }
 
         a {
+            @include text-truncate;
+
             position: relative;
             z-index: 2;
             font-family: "DM Sans", sans-serif;
